🐛[Fix] InternalLinkMoves 겹침 문제 해결 위해 z-index 줌

--- a/src/components/InternalLinkMoveTest/InternalLinkMoveTest.module.css
+++ b/src/components/InternalLinkMoveTest/InternalLinkMoveTest.module.css
@@ -3,4 +3,19 @@
   flex-flow: column nowrap;
   gap: 2.5rem;
   max-width: 65.625rem;
+  margin: 0 auto;
+}
+
+.zIndex {
+  z-index: 10;
+  position: sticky;
+  top: 0;
+}
+
+.productReview {
+  margin-bottom: 4.5rem;
+}
+
+.productInquiry {
+  margin-bottom: 6rem;
 }
